scrollbar style, about positioning fix

--- a/components/common/about-item/about-item.module.css
+++ b/components/common/about-item/about-item.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   gap: 60px;
   align-items: center;
+  justify-content: center;
 }
 
 .description {
